# valiant

./: .gitignore  CMakeLists.txt  README.md
examples/: example_basic.cpp  example_camera.cpp  example_collider.cpp  example_pong.cpp  example_rectangle.cpp
scripts/: format.py
tests/: test_camera.cpp  test_collider.cpp  test_color.cpp  test_object.cpp  test_renderer.cpp  test_shape.cpp  test_sprite_renderer.cpp  test_time.cpp
valiant/: camera.hpp  collider.hpp  color.hpp  error.hpp  input.hpp  object.hpp  renderer.hpp  shape.hpp  sprite_renderer.hpp  time.hpp  valiant.hpp
